--- a/banksystem/templates/base.html
+++ b/banksystem/templates/base.html
@@ -8,48 +8,33 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='basic.css') }}"
     />
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f4;
-      }
-      nav {
-        background: #003366;
-        padding: 1em;
-      }
-      nav a {
-        color: white;
-        margin-right: 20px;
-        text-decoration: none;
-        font-weight: bold;
-      }
-      .container {
-        padding: 2em;
-      }
-    </style>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="{{ url_for('static', filename='favicon.ico') }}"
+    />
   </head>
+
   <body>
     <nav>
       <div class="nav-left">
-        <a href="{{ url_for('auth.home') }}" class="logo-link"> </a>
-        <img
-          src="{{ url_for('static', filename='banklogo.jpg') }}"
-          alt="Bank Logo"
-          class="bank-logo"
-        />
+        <a href="{{ url_for('auth.home') }}" class="logo-link">
+          <img
+            src="{{ url_for('static', filename='banklogo.jpg') }}"
+            alt="Bank Logo"
+            class="bank-logo"
+          />
+        </a>
 
         {% if session.user_id %}
         <a href="{{ url_for('dashboard.dashboard') }}">Dashboard</a>
-        <!-- <a href="{{ url_for('profile.profile') }}">Profile</a> -->
         <a href="{{ url_for('account.transactions') }}">Transactions</a>
         <a href="{{ url_for('account.loans') }}">Loans</a>
         {% else %}
         <a href="{{ url_for('auth.home') }}">Home</a>
-        <!-- <a href="{{ url_for('profile.profile') }}">Profile</a> -->
         {% endif %}
       </div>
+
       <div class="nav-right">
         <a href="{{ url_for('profile.profile') }}" class="profile-link">
           <img
@@ -69,7 +54,6 @@
       >
         {{ message }}
       </p>
-
       {% endfor %} {% endif %} {% endwith %} {% block content %}{% endblock %}
     </div>
   </body>
