--- a/banksystem/templates/login.html
+++ b/banksystem/templates/login.html
@@ -1,16 +1,36 @@
-{% extends 'base.html' %} {% block extra_css %}<link
-  rel="stylesheet"
-  href="{{ url_for('static', filename='sign.css') }}"
-/>{% endblock %} {% block title %}Login{% endblock %} {% block content %}
-<h2>Login</h2>
-<form method="POST">
-  <input name="email" type="email" placeholder="Email" required /><br />
-  <input
-    name="password"
-    type="password"
-    placeholder="Password"
-    required
-  /><br />
-  <button type="submit">Login</button>
-</form>
+{% extends 'base.html' %} {% block extra_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='sign.css') }}" />
+<style>
+  .center-container {
+    display: flex;
+    min-height: 130vh;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 1em;
+    box-sizing: border-box;
+    text-align: center;
+  }
+  form {
+    max-width: 360px;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    align-items: center;
+  }
+  form input,
+  form button {
+    width: 100%;
+  }
+</style>
+{% endblock %} {% block title %}Login{% endblock %} {% block content %}
+<div class="center-container">
+  <h2>Login</h2>
+  <form method="POST">
+    <input name="email" type="email" placeholder="Email" required />
+    <input name="password" type="password" placeholder="Password" required />
+    <button type="submit">Login</button>
+  </form>
+</div>
 {% endblock %}
